# UltraStarKaraokeMaker

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: FUNDING.yml
python-sidecar/: README.md  fetch_assets.py  main.py  read_tags.py  requirements.txt  server.py  verify_setup.py
python-sidecar/eval/: README.md  evaluate.py  library_replay.py  seed_set.json  usdx_parse.py
python-sidecar/pipeline/: align.py  beatgrid.py  build_song.py  download.py  filenames.py  metadata.py  numerals.py  pitch.py  proc_utils.py  separate.py  syllabify.py  ultrastar_writer.py
python-sidecar/tests/: test_align_logic.py  test_beatgrid_logic.py  test_build_song_logic.py  test_download_env_logic.py  test_duet_logic.py  test_eval_logic.py  test_filenames_logic.py  test_numerals_logic.py  test_syllabify_logic.py  test_ultrastar_format_conventions.py
rust-core/: Cargo.toml  README.md
rust-core/src/: lib.rs  main.rs  ultrastar_writer.rs
rust-core/tests/: ultrastar_writer_test.rs
rust-core/tests/fixtures/: sample_song.json
scripts/: setup-sidecar.ps1
src/: App.tsx  i18n.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/review/: ReviewScreen.tsx
