[package]
name = "uskmaker"
version = "0.6.0"
description = "USKMaker - gerador de pacotes de karaokê UltraStar com IA"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

# Fase 1: núcleo já validado (ultrastar_writer) - reaproveitado aqui em
# vez de duplicar a lógica. Ver ../rust-core/README.md.
uskmaker-core = { path = "../rust-core" }

[features]
custom-protocol = ["tauri/custom-protocol"]
